[package]
name = "iam"
version = "0.1.0"
edition = "2021"

[lib]
name = "iam"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls", "serde"] }
async-trait = "0.1"
tracing = "0.1"
jsonwebtoken = "9.3"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wiremock = { version = "0.5" }

